--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -2,15 +2,26 @@
 <form (submit)="onLoginSubmit()">
   <div class="form-group">
     <label>Company name</label>
-    <input type="text" class="form-control" [(ngModel)]="companyName" name="companyName">
+    <input type="text"
+           class="form-control"
+           [(ngModel)]="companyName"
+           name="companyName">
   </div>
   <div class="form-group">
     <label>Email</label>
-    <input type="text" class="form-control" [(ngModel)]="email" name="email">
+    <input type="text"
+           class="form-control"
+           [(ngModel)]="email"
+           name="email">
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" [(ngModel)]="password"  name="password">
+    <input type="password"
+           class="form-control"
+           [(ngModel)]="password"
+           name="password">
   </div>
-  <input type="submit" class="btn btn-primary" value="Login">
+  <input type="submit"
+         class="btn btn-primary"
+         value="Login">
 </form>
