--- a/angular-src/src/app/components/modals/cabels-modals/cable-distance-modal/cable-distance-modal.component.html
+++ b/angular-src/src/app/components/modals/cabels-modals/cable-distance-modal/cable-distance-modal.component.html
@@ -1,11 +1,21 @@
 <div class="modal-padding"
-(click)="onContainerClicked($event)" class="modal fade" tabindex="-1" [ngClass]="{'in': visibleAnimate}"
-[ngStyle]="{'display': visible ? 'block' : 'none', 'opacity': visibleAnimate ? 1 : 0}">
+     (click)="onContainerClicked($event)"
+     class="modal fade"
+     tabindex="-1"
+     [ngClass]="{'in': visibleAnimate}"
+     [ngStyle]="{'display': visible ? 'block' : 'none', 'opacity': visibleAnimate ? 1 : 0}">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">{{title}}</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="close()">
+        <h4 class="modal-title"
+            id="myModalLabel">
+              {{title}}
+        </h4>
+        <button type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+                (click)="close()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -31,75 +41,67 @@
               <label>Elevation</label>
             </div>  
           </div>
-          <div class="col-1">
-
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
+            </div>  
           </div>
         </div>
         <div class="row">
-            <div class="col-2">
-              <div class="form-group">
-                <input type="text" class="form-control" disabled/>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="form-group">
-                <input type="text" class="form-control" disabled/>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="form-group">
-                <input type="text" class="form-control" disabled/>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="form-group">
-                <input type="text" class="form-control" disabled/>
-              </div>  
-            </div>
-            <div class="col-1">
-  
+          <div class="col-2">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
             </div>
           </div>
-          <div class="row">
-              <div class="col-2">
-                <div class="form-group">
-                  <input type="text" class="form-control" disabled/>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="form-group">
-                  <input type="text" class="form-control" disabled/>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="form-group">
-                  <input type="text" class="form-control" disabled/>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="form-group">
-                  <input type="text" class="form-control" disabled/>
-                </div>  
-              </div>
-              <div class="col-1">
-    
-              </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
             </div>
-      </div>
-      <div class="modal-footer">
-        <!--
-        <div class="row">
-          <div class="d-flex justify-content-end">
-            <div class="form-group pr-1">
-              <button *ngIf="modalFlag" class="btn btn-danger" (click)="deleteItem(selectedValue)">Delete</button>
-              <button *ngIf="!modalFlag" class="btn btn-success" (click)="addItem(itenElement)" [disabled]="!itenElement">Add</button>
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
             </div>
-            <div class="pl-1 pr-2">
-              <button class="btn btn-primary" (click)="close()">Close</button>
-            </div>
+          </div>
+          <div class="col-3">
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     disabled/>
+            </div>  
           </div>
         </div>
-      -->
       </div>
     </div>
   </div>
