--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -2,35 +2,61 @@
 <form (submit)="onRegisterSubmit()">
   <div class="form-group">
     <label>User Name</label>
-    <input type="text" [(ngModel)]="userName" name="userName" class="form-control">
+    <input type="text"
+           [(ngModel)]="userName"
+           name="userName"
+           class="form-control">
   </div>
   <div class="form-group">
     <label>Email</label>
-    <input type="text" [(ngModel)]="email" name="email" class="form-control">
+    <input type="text"
+           [(ngModel)]="email"
+           name="email"
+           class="form-control">
   </div>
   <div class="form-group">
     <label>First Name</label>
-    <input type="text" [(ngModel)]="firstName" name="firstName" class="form-control" >
+    <input type="text"
+           [(ngModel)]="firstName"
+           name="firstName"
+           class="form-control">
   </div>
   <div class="form-group">
       <label>Last Name</label>
-      <input type="text" [(ngModel)]="lastName" name="lastName" class="form-control" >
+      <input type="text"
+             [(ngModel)]="lastName"
+             name="lastName"
+             class="form-control">
   </div>
   <div class="form-group">
       <label>Company Name</label>
-      <input type="text" [(ngModel)]="companyName" name="companyName" class="form-control" >
+      <input type="text"
+             [(ngModel)]="companyName"
+             name="companyName"
+             class="form-control">
   </div>
   <div class="form-group">
     <label>City</label>
-    <input type="text" [(ngModel)]="city" name="city" class="form-control" >
+    <input type="text"
+           [(ngModel)]="city"
+           name="city"
+           class="form-control">
   </div>
   <div class="form-group">
     <label>Phone Number</label>
-    <input type="text" [(ngModel)]="phone" name="phone" class="form-control" >
+    <input type="text"
+           [(ngModel)]="phone"
+           name="phone"
+           class="form-control">
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" [(ngModel)]="password" name="password" class="form-control">
+    <input type="password"
+           [(ngModel)]="password"
+           name="password"
+           class="form-control">
   </div>
-  <input type="submit" class="btn btn-primary" value="Submit">
+  <input type="submit"
+         class="btn btn-primary"
+         value="Submit">
 </form>
